stops horizontal scroll

--- a/public/css/homepage.css
+++ b/public/css/homepage.css
@@ -629,7 +629,9 @@
     width: 100%;
     height: 100%;
     position: absolute; 
-    top:0
+    top:0;
+    max-width: 100%;
+    overflow-x: hidden;
   }
 
 
@@ -658,7 +660,9 @@
 
   #aboutpage {
     overflow: auto;
-    top:0
+    top:0;
+    max-width: 100%;
+    overflow-x: hidden;
   }
   .about .text {
     margin-top: 20vw;
@@ -700,7 +704,9 @@
 
   #projectspage {
     overflow: auto;
-    top:0
+    top:0;
+    max-width: 100%;
+    overflow-x: hidden;
   }
   .cardimage {
     opacity: 1;
@@ -748,7 +754,9 @@
   /* EXPERIENCE */
   #experiencepage {
     overflow: auto;
-    top:0
+    top:0;
+    max-width: 100%;
+    overflow-x: hidden;
   }
 
   .cardPad {
@@ -859,7 +867,9 @@
   /* CONTACTS */
   #contactpage {
     overflow: auto;
-    top:0
+    top:0;
+    max-width: 100%;
+    overflow-x: hidden;
   }
   .page {
     position: absolute;
